[package]
name = "tonic_learn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "minimal-server"
path = "src/minimal/server.rs"

[[bin]]
name = "redis-server"
path = "src/redis/server.rs"

# [[bin]]
# name = "streaming-server"
# path = "src/stream/server.rs"

[dependencies]
redis = { version = "0.24.0", features = ["tokio-comp"] }

tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1"

prost = "0.12"
prost-types = "0.12"

tonic="0.11"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }